# firstStreamlitApp

./: README 2.md  README.md  README_FOR_STUDENTS.md  healthcare_client_first_meeting.md  medication_pipeline.py  nlp-app.py  requirements.txt  requirements_lee.txt  retinal_pipeline.py  setup_data.py  streamlit-app.py
cnn_image_pipeline/: README.md  requirements.txt
cnn_image_pipeline/.github/workflows/: ci.yml
cnn_image_pipeline/configs/: local.yaml  prod.yaml
cnn_image_pipeline/src/: config.py  data.py  model.py  train.py
cnn_image_pipeline/src/utils/: logger.py
data/: README.md
healthcare/: clinical_data_preprocessing_hints.py  patient_medication_feedback.csv
healthcare/retinal_scan_images/: README.md
models/: model_tracker.xlsx  model_tracker_guide.xlsx
models/innovation/: README.md
notebooks/experiments/: README.md  Srividya_DataPipeline_v4.ipynb  srividya_datapipeline_v4.py
retinal-preprocess-pipeline-2/: .gitignore  README.md  pyproject.toml  requirements.txt
retinal-preprocess-pipeline-2/configs/: local.yaml  production.yaml
retinal-preprocess-pipeline-2/src/retinal_pipeline/: cli.py  config.py  logger.py  preprocess.py
src/models/: Srividya_MLPipeline_CNN_SimpleModel_v1.ipynb  srividya_mlpipeline_cnn_simplemodel_v1.py
src/preprocessing/: README.md
uploads/: model_tracker_updated
